# pricehawk

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alert_testing.md  architecture.md  database_schema.sql  docker-compose.yml  logic_used.md  main.py  prd.md  pyproject.toml  pytest.ini  requirements.txt  run.py  supabase_setup.md  test.http  testing.md
app/api/routes/: account.py  alerts.py  auth.py  charts.py  discovery.py  export.py  insights.py  pages.py  products.py  scraper.py  tracked_products.py
app/core/: config.py  security.py
app/db/: database.py  models.py
app/middleware/: __init__.py  rate_limit.py
app/services/: ai_service.py  alert_service.py  chart_service.py  email_service.py  scraper_service.py  store_detector.py  store_discovery.py
app/services/stores/: __init__.py  amazon.py  base.py  ebay.py  generic.py  shopify.py  woocommerce.py
app/tasks/: celery_app.py  scraper_tasks.py
app/templates/: base.html
app/templates/account/: settings.html
app/templates/alerts/: settings.html
app/templates/auth/: forgot_password.html  login.html  reset_password.html  signup.html  verify_reset_code.html
app/templates/components/: empty_state.html  flash.html  navbar.html  sidebar.html
app/templates/dashboard/: index.html
app/templates/discovery/: index.html
app/templates/insights/: index.html
app/templates/products/: _card.html  _price_row.html  detail.html  list.html
app/tests/: __init__.py  conftest.py  test_export.py  test_health.py  test_products.py
docs/: architecture.md  database_schema.sql  logic_used.md  prd.md  railway_deployment.md
tests/: __init__.py  conftest.py  scraper-test.md  test_api.py  test_auth.py  test_health.py  test_pages.py  test_product_authorization.py  test_scraper.py
